# travel

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep
docker/: Dockerfile.worker  README.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/atoms/: Badge.tsx  Button.tsx  Icon.tsx  Input.tsx  Skeleton.tsx
frontend/src/components/molecules/: DatePickerField.tsx  PassengerSelector.tsx  ResultCard.tsx  TransportToggle.tsx
frontend/src/components/organisms/: Navbar.tsx  ResultsGrid.tsx  SearchHero.tsx
frontend/src/components/templates/: SearchPageTemplate.tsx
frontend/src/hooks/: useDateRange.ts  usePassengers.ts
frontend/src/lib/: api-client.ts  provider-config.ts  utils.ts
src/travel/: __init__.py  config.py
src/travel/application/schemas/: __init__.py  accommodation.py  flight.py  search.py  train.py  validators.py
src/travel/domain/entities/: accommodation.py  flight.py  train.py
src/travel/domain/repositories/: __init__.py  accommodation_repository.py  flight_repository.py  train_repository.py
src/travel/infrastructure/: __init__.py
src/travel/infrastructure/database/: __init__.py  base.py  session.py
src/travel/infrastructure/models/: __init__.py  accommodation.py  flight.py  train.py
src/travel/infrastructure/scraping/: __init__.py  base_scraper.py  circuit_breaker.py  network_middleware.py  proxy_pool.py  scraper_factory.py  session_manager.py
src/travel/infrastructure/scraping/providers/: __init__.py  airbnb.py  booking.py  easyjet.py  escapada_rural.py  google_flights.py  iberia.py  idealista.py  iryo.py  ouigo.py  renfe.py  ruralia.py  ryanair.py  skyscanner.py  sncf.py  trainline.py  trenes_com.py  trivago.py  vrbo.py  vueling.py
src/travel/infrastructure/security/: rate_limiter.py  security_headers.py
src/travel/presentation/: __init__.py  app.py  dependencies.py
src/travel/presentation/api/v1/: accommodations.py  flights.py  search.py  trains.py
src/travel/worker/: celery_app.py  tasks.py
tests/: test_init.py  test_scraping.py  test_security.py
