[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel"
version = "0.1.0"
description = "Travel aggregation engine backend"
requires-python = ">=3.11"
dependencies = [
    # --- Web framework & DB ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # --- Distributed task queue ---
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # --- Async scraping ---
    "playwright>=1.47.0",
    "playwright-stealth>=1.0.6",
    # --- Resilience ---
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "greenlet>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/travel"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy — strict mode
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_stubs = true

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*"]
ignore_missing_stubs = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_stubs = true

[[tool.mypy.overrides]]
module = ["playwright.*", "playwright_stealth.*"]
ignore_missing_stubs = true

[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_stubs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
